tests/fixtures/invalid/list_bool.py
# Cannot call list() with Bool
x = list(True)
